--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <script src="tile.js" type="text/javascript"></script>
     <script src="maze.js" type="text/javascript"></script>
+    <script src="tween.js" type="text/javascript"></script>
+    <script src="hamster.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
