--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
+    <script src="maps.js" type="text/javascript"></script>
     <script src="tile.js" type="text/javascript"></script>
     <script src="maze.js" type="text/javascript"></script>
     <script src="tween.js" type="text/javascript"></script>
